Changes to day3+4
For some reason on those days the record being red from the file contain control characters in a docker iris but not  in iris on windows environment (maybe the linux end of line is different then the one of windows).
Striping control characters from the lines

--- a/src/AOC2021/Day03.cls
+++ b/src/AOC2021/Day03.cls
@@ -9,8 +9,8 @@ ClassMethod Part1(verbose = 0) As %String [ Private ]
 {
 	set stream=..GetInput(..#InputFile)
 	while 'stream.AtEnd {
-		set Record=stream.ReadLine()
-		s BitCount=$l(Record)
+		set Record=$zstrip(stream.ReadLine(),"*C")
+		set BitCount=$length(Record)
 		for bitPos=1:1:BitCount {
 			set bit=$extract(Record,bitPos)
 			if $increment(bits(bitPos,bit))
@@ -48,7 +48,7 @@ ClassMethod Part2(verbose = 0) As %String [ Private ]
 	set stream=..GetInput(..#InputFile)
 	set Line=0
 	while 'stream.AtEnd {
-		set Record=stream.ReadLine()
+		set Record=$zstrip(stream.ReadLine(),"*C")
 		set Line=Line+1
 		set RecordsArr(Line)=Record
 	}
