Change in reading from a file
Add GetInputToArray class method in Base class.
Stripping control characters while reading a line from the file (In linux default line terminator is LF while in windows it's CR+LF, so copying a file from windows into a docker running linux caused errors in some of the days due to extra CR).
Changed in all days the call from GetInput to GetInputToArray.

--- a/src/AOC2021/Base.cls
+++ b/src/AOC2021/Base.cls
@@ -1,15 +1,27 @@
 Class AOC2021.Base
 {
 
-// Parameter Folder = "C:\devl\work\Cache\AOC\Files\2021\";
-Parameter Folder = "/irisrun/repo/Files/";
+Parameter Folder = "C:\devl\work\Cache\AOC\Files\2021\";
+
+ClassMethod GetInputToArray(fn As %String, ByRef recordsArr) As %Status
+{
+    set stream = ..GetInput(fn)
+    kill recordsArr
+    set Line=0
+	while 'stream.AtEnd {
+		set Record=$zstrip(stream.ReadLine(),"*C")
+		set Line=Line+1
+		set recordsArr(Line)=Record
+	}
+	quit $$$OK
+}
 
 ClassMethod GetInput(fn) As %Stream
 {
-   
     set fn=..#Folder_fn
     set stream = ##Class(%Stream.FileCharacter).%New()
     do stream.LinkToFile(fn)
+    set stream.LineTerminator=$char(13,10)
     return stream
 }
 
