--- a/src/AOC2021/Day09.cls
+++ b/src/AOC2021/Day09.cls
@@ -7,13 +7,7 @@ Parameter InputFile = "d09.txt";
 
 ClassMethod Part1(verbose = 0) As %String [ Private ]
 {
-	set stream=..GetInput(..#InputFile)
-    set line=0
-	while 'stream.AtEnd {
-		set line=line+1
-		set record=stream.ReadLine()
-		set recordsArr(line)=record
-	}
+	do ..GetInputToArray(..#InputFile,.recordsArr)
 	set Line="",RISK=0
 	for {
 		set Line=$order(recordsArr(Line)) quit:Line=""
@@ -39,13 +33,7 @@ ClassMethod Part1(verbose = 0) As %String [ Private ]
 
 ClassMethod Part2(verbose = 0) As %String [ Private ]
 {
-	set stream=..GetInput(..#InputFile)
-    set line=0
-	while 'stream.AtEnd {
-		set line=line+1
-		set record=stream.ReadLine()
-		set recordsArr(line)=record
-	}
+	do ..GetInputToArray(..#InputFile,.recordsArr)
 	set Line=""
 	for {
 		set Line=$order(recordsArr(Line)) quit:Line=""
