--- a/src/AOC2021/Base.cls
+++ b/src/AOC2021/Base.cls
@@ -1,7 +1,9 @@
 Class AOC2021.Base
 {
 
-Parameter Folder = "C:\devl\work\Cache\AOC\Files\2021\";
+// Parameter Folder = "C:\devl\work\Cache\AOC\Files\2021\";
+
+Parameter Folder = "/irisrun/repo/Files/";
 
 ClassMethod GetInputToArray(fn As %String, ByRef recordsArr) As %Status
 {
